# LLMConnectors

./: .env_template  .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
llmconnectors/: __init__.py
llmconnectors/connectors/: ApiAnthropic.py  ApiOpenAI.py  ApiPerplexity.py  ConfigAnthropic.py  ConfigOpenAI.py  ConfigPerplexity.py  __init__.py
llmconnectors/logger/: __init__.py  logger.py
